<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
   >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layoutDirection="ltr"
        android:orientation="horizontal"
        android:padding="5dp">

        <ImageView
            android:id="@+id/popup_iv_zoom_in"
            style="@style/popup_imageView"
            android:src="@drawable/ic_zoom_in_black_48dp" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:background="@color/publicDivider" />

        <ImageView
            android:id="@+id/popup_iv_zoom_out"
            style="@style/popup_imageView"
            android:src="@drawable/ic_zoom_out_black_48dp" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/popup_rl_nightStatus"
        style="@style/popup_relativeLayout">

        <ToggleButton
            android:id="@+id/popup_tgl_nightStatus"
            style="@style/popup_tgl"
            android:background="@drawable/btn_toggle" />

        <TextView
            android:id="@+id/popup_tv_nightStatus"
            style="@style/popup_textView"
            android:layout_toRightOf="@id/popup_tgl_nightStatus"
            android:text="@string/night_status" />


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/popup_rl_translatedSubtitles"
        style="@style/popup_relativeLayout">


        <ToggleButton
            android:id="@+id/popup_tgl_translatedSubtitles"
            style="@style/popup_tgl"
            android:background="@drawable/btn_toggle" />

        <TextView
            android:id="@+id/popup_tv_translatedSubtitles"
            style="@style/popup_textView"
            android:layout_toRightOf="@+id/popup_tgl_translatedSubtitles"
            android:text="@string/translatedSubtitles" />

    </RelativeLayout>

    <TextView
        android:id="@+id/popup_tv_more"
        android:layout_marginLeft="10dp"
        android:padding="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/showText_popup_more"
        android:textSize="@dimen/public_tv_text_size"
        android:textColor="@color/popup_tv_more"
        android:clickable="true"
        android:layout_gravity="left"
        android:gravity="center"
        android:background="@drawable/selector"/>
</LinearLayout>